# jolmind

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  example-config.yaml  main.py  pyproject.toml
scripts/: init_db.sql
src/agent/: agent_builder.py  memory.py  naming.py  persistence.py  prompt.py
src/agent/tools/: __init__.py  base.py
src/agent/tools/builtin/: __init__.py  calculator.py  fetch_webpage.py  file_tools.py  time_tool.py  web_search.py
src/api/: app.py  deps.py  schemas.py
src/api/routers/: chat.py  health.py  messages.py  providers.py  sessions.py  tool_call_logs.py  tts.py  users.py
src/config/: __init__.py  loader.py
src/db/: __init__.py  database.py  models.py
src/db/crud/: __init__.py  message_crud.py  session_crud.py  tool_call_log_crud.py  user_crud.py
src/providers/llm/: __init__.py  base.py  openai_provider.py  registry.py
src/providers/tts/: __init__.py  base.py  registry.py  xfyun_provider.py
src/utils/: __init__.py  http_client.py  langsmith.py  logger.py  logging_setup.py
